--- a/src/basicComponents/dashboardContainer/components/checker/styles/checker.module.scss
+++ b/src/basicComponents/dashboardContainer/components/checker/styles/checker.module.scss
@@ -4,6 +4,7 @@
   border: solid 1px #ff4800;
   display: flex;
   flex-direction: row;
+  height: 80px;
   align-items: center;
   justify-content: space-between;
   padding: 21px 16px;
