--- a/src/basicComponents/dashboardContainer/components/checker/styles/checker.module.scss
+++ b/src/basicComponents/dashboardContainer/components/checker/styles/checker.module.scss
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 21px 16px;
+  background-color: #ffffff;
 }
 
 .checkerContainerRight {
