--- a/src/basicComponents/dashboardContainer/components/controller/styles/controller.module.scss
+++ b/src/basicComponents/dashboardContainer/components/controller/styles/controller.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   border-radius: 14px;
   border: solid 1.6px #c6edd5;
+  background-color: #ffffff;
 }
 
 .controllerContainerTop {
