--- a/src/basicComponents/notificationComponents/components/search/Styles/search.module.scss
+++ b/src/basicComponents/notificationComponents/components/search/Styles/search.module.scss
@@ -10,8 +10,10 @@
   width: 100%;
   height: 100%;
   background-color: transparent;
-  &:hover,
-  &:active {
-    border: none;
-  }
+  border: none;
+  // &:hover,
+  // &:active {
+  //   // border: none;
+  //   outline: none;
+  // }
 }
