--- a/src/basicComponents/notificationComponents/components/header/Styles/header.module.scss
+++ b/src/basicComponents/notificationComponents/components/header/Styles/header.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
   justify-content: space-between;
-  padding: 24px;
+  // padding: 24px;
 }
 
 .headerContainerText {
