--- a/src/basicComponents/notificationComponents/components/search/Styles/search.module.scss
+++ b/src/basicComponents/notificationComponents/components/search/Styles/search.module.scss
@@ -1,16 +1,23 @@
 .SearchContainer {
-  width: 86%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  // width: 86%;
   height: 44px;
   background-color: #f8f6f8;
   border: none;
   margin: auto;
+  padding: 0px 24px 0px 24px;
 }
 
 .SearchContainerInput {
+  font-size: 16px;
   width: 100%;
   height: 100%;
   background-color: transparent;
   border: none;
+  // margin-right: 24px;
   // &:hover,
   // &:active {
   //   // border: none;
