--- a/src/basicComponents/notificationComponents/components/footer/Styles/footer.module.scss
+++ b/src/basicComponents/notificationComponents/components/footer/Styles/footer.module.scss
@@ -3,7 +3,7 @@
 }
 
 .paginationContainer {
-  width: 57%;
+  width: fit-content;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100%;
+  max-width: 100%;
   height: 30px;
   margin: 0 3px;
   padding: 5px 10px 5px 9px;
@@ -32,15 +32,26 @@
   background-color: #f8f6f8;
 }
 
-.active {
+.paginationContainerNumbers {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 20px;
-  height: 20px;
+  background-color: #f8f6f8;
   margin: 0 10px 0 11px;
   padding: 2px 7px 1px 6px;
+  border: none;
+  background-color: transparent;
+  color: #8d928f;
+}
+
+.active {
+  width: 20px;
+  height: 20px;
   border-radius: 50px;
   border: solid 1px #2bbe5b;
   background-color: rgba(43, 190, 91, 0.24);
+}
+
+.footerContainerHide {
+  display: none;
 }
