--- a/src/basicComponents/notificationComponents/components/table/Styles/table.module.scss
+++ b/src/basicComponents/notificationComponents/components/table/Styles/table.module.scss
@@ -25,14 +25,18 @@
   padding-right: 10px;
 }
 
+.TableContainerBody {
+  height: 376px;
+}
+
 .TableContainerBodyTr {
   padding: 14px 0px;
-  height: 47px;
+  height: 47px !important;
   font-size: 12px;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
-  line-height: 1.92;
+  // line-height: 1.92;
   letter-spacing: normal;
   text-align: right;
   &:nth-child(odd) {
