filter table search

--- a/src/basicComponents/notificationComponents/components/table/Styles/table.module.scss
+++ b/src/basicComponents/notificationComponents/components/table/Styles/table.module.scss
@@ -1,6 +1,7 @@
 .TableContainer {
   // width: 86%;
   margin: auto;
+  height: 100%;
   // font-family: IRANSansFaNum;
 }
 
@@ -26,7 +27,7 @@
 }
 
 .TableContainerBody {
-  height: 376px;
+  // height: 376px;
 }
 
 .TableContainerBodyTr {
