--- a/src/basicComponents/notificationComponents/components/header/Styles/header.module.scss
+++ b/src/basicComponents/notificationComponents/components/header/Styles/header.module.scss
@@ -10,3 +10,10 @@
 .headerContainerText {
   font-size: 16px;
 }
+
+.headerContainerBtn {
+  background-color: transparent;
+  border: none;
+  width: 24px;
+  height: 24px;
+}
