--- a/src/basicComponents/notificationComponents/components/footer/Styles/footer.module.scss
+++ b/src/basicComponents/notificationComponents/components/footer/Styles/footer.module.scss
@@ -1,5 +1,6 @@
 .footerContainer {
   width: 100%;
+  margin: 118px auto auto 36px;
 }
 
 .paginationContainer {
@@ -13,6 +14,7 @@
 
 .paginationContainerArrowRight,
 .paginationContainerArrowLeft {
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,13 +37,10 @@
 }
 
 .paginationContainerNumbers {
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
+  cursor: pointer;
   background-color: #f8f6f8;
   border: none;
   color: #8d928f;
-  // font-family: IRANSansFaNum;
   margin: 7px 17px 6px 9px;
   font-size: 11px;
 }
