--- a/src/basicComponents/notificationComponents/components/search/Styles/search.module.scss
+++ b/src/basicComponents/notificationComponents/components/search/Styles/search.module.scss
@@ -1,3 +1,10 @@
+.SearchContainerInput:focus {
+  outline: none;
+  border-color: inherit;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
 .SearchContainer {
   display: flex;
   justify-content: space-between;
