--- a/src/basicComponents/notificationComponents/components/search/Styles/search.module.scss
+++ b/src/basicComponents/notificationComponents/components/search/Styles/search.module.scss
@@ -29,14 +29,9 @@
 }
 
 .SearchContainerIcon {
+  cursor: pointer;
   width: 24px;
   height: 24px;
   background-color: transparent;
   border: none;
-  // margin-right: 24px;
-  // &:hover,
-  // &:active {
-  //   // border: none;
-  //   outline: none;
-  // }
 }
